--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>I am available for freelance work.</h3>
-      <p class="content2">Incase you need a really cool logo and website for your startup or your company, feel free to contact me </p>
+      <p class="content2">Incase you need a really cool logo,edits or a website, feel free to contact me </p>
       <a class="btn" href="mailto:shahchaitya212@gmail.com">CONTACT ME</a>
     </div>
   </div>
